force-app/main/default/objects/Field_Work_Case__c/Field_Work_Case__c.object-meta.xml
<CustomObject>
    <label>Field Work Case</label>
    <nameField>
        <displayFormat>FWT-{0000}</displayFormat>
        <label>Field Work Types Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Work Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>