force-app/main/default/objects/Field_Work_Case__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Field_Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>