force-app/main/default/objects/Field_Work_Case__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Porter request</fullName>
            </value>
            <value>
                <fullName>Gas Request</fullName>
            </value>
            <value>
                <fullName>Internet Request</fullName>
            </value>
            <value>
                <fullName>Temporary Address Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>